--- a/admin/src/components/Navbar/Navbar.css
+++ b/admin/src/components/Navbar/Navbar.css
@@ -1,12 +1,12 @@
-.navbar{
+.admin-navbar{
     display: flex;
     justify-content: space-between;
+    padding: 10px 4%;
     align-items: center;
-    padding: 8px 4%;
 }
-.navbar .logo{
-    width: max(10%,80px);
+.admin-navbar .logo{
+    width: max(10%, 80px);
 }
-.navbar .profile{
+.admin-navbar .profile{
     width: 40px;
 }
