--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -1,33 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
-*{
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: Outfit;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+ 
+*, *::before, *::after {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+html, body{
+    width: 100%;
+    height: 100vh;
+    font-family: 'Outfit', sans-serif;
+    background-color: #fcfcfc;
+}
+a {
+    text-decoration: none;
+    color: inherit;
+}
+hr {
+    border: none;
+    height: 1px;
+    background: #a9a9a9;
 }
 
-body{
-  min-height: 100vh;
-  background-color: #fcfcfc;
-}
-a{
-  text-decoration: none;
-  color: inherit;
-}
-hr{
-  border: none;
-  height: 1px;
-  background-color: #a9a9a9;
-}
 .app-content{
-  display: flex;
+    display: flex;
 }
+
 .flex-col{
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-.cursor{
-  cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
