--- a/admin/src/pages/Orders/Orders.css
+++ b/admin/src/pages/Orders/Orders.css
@@ -1,91 +1,46 @@
-.order-item {
+.order-item{
     display: grid;
-    grid-template-columns: 0.5fr 2fr 1fr 1fr 1fr;
-    align-items: center;
-    gap: 20px;
-    border: 1px solid purple;
+    grid-template-columns: .5fr 2fr 1fr 1fr 1fr;
+    align-items: start;
+    gap: 30px;
+    border: 1px solid tomato;
     padding: 20px;
-    margin: 30px 0px;
-    font-size: 14px;
+    margin: 30px 0;
+    font-size: 14px ;
     color: #505050;
-    flex-wrap: wrap;
 }
-
-.order-item-food,
-.order-item-name {
+.order-item-food, .order-item-name{
     font-weight: 600;
 }
-
-.order-item-name {
-    margin-top: 20px;
+.order-item-name{
+    margin-top: 30px;
     margin-bottom: 5px;
 }
-
-.order-item-address {
+.order-item-address{
     margin-bottom: 10px;
 }
-
-.order-item select {
+.order-item select{
     background-color: #ffe8e4;
-    border: 1px solid;
+    border: 1px solid tomato;
     width: max(10vw, 120px);
     padding: 10px;
     outline: none;
-    font-size: 14px;
+}
+.order-item option{
+    background-color: #ffe8e4;
 }
 
-@media (max-width: 1000px) {
-    .order-item {
+@media (max-width:1000px) {
+    .order-item{
+        font-size: 12px;
         grid-template-columns: 0.5fr 2fr 1fr;
         padding: 15px 8px;
-        font-size: 12px;
-        gap: 15px;
     }
-
-    .order-item select {
+    .order-item select{
         padding: 5px;
         font-size: 12px;
     }
-
-    .order-item img {
+    .order-item img{
         width: 40px;
-    }
-}
-
-@media (max-width: 768px) {
-    .order-item {
-        grid-template-columns: 1fr;
-        text-align: center;
-        padding: 10px;
-        font-size: 12px;
-    }
-
-    .order-item select {
-        width: 100%;
-        padding: 8px;
-        font-size: 12px;
-    }
-
-    .order-item img {
-        width: 35px;
-        margin: auto;
-    }
-}
-
-
-@media (max-width: 480px) {
-    .order-item {
-        padding: 8px;
-        font-size: 11px;
-        gap: 10px;
-    }
-
-    .order-item select {
-        font-size: 11px;
-        padding: 6px;
-    }
-
-    .order-item img {
-        width: 30px;
     }
 }
